Convert umask from string to octal
Fixes the following issue with v2.24.0:
* 'umask' expected type 'fs.FileMode', got unconvertible type 'string'

--- a/home/.chezmoi.toml.tmpl
+++ b/home/.chezmoi.toml.tmpl
@@ -2,7 +2,7 @@
 {{ $chezmoiInitdToml := joinPath $chezmoiInitd "*.toml" -}}
 {{ $chezmoiInitdFeatures := joinPath $chezmoiInitd "features.toml" -}}
 
-umask = "0o022"
+umask = 0o022
 
 [template]
 options = ["missingkey=default"]
