Disable container module

--- a/home/dot_config/starship.toml.tmpl
+++ b/home/dot_config/starship.toml.tmpl
@@ -3,6 +3,9 @@
 success_symbol = "[>](bold green)"
 error_symbol = "[>](bold red)"
 
+[container]
+disabled = true
+
 [directory]
 style = "cyan"
 truncation_symbol = "…/"
